--- a/css/contact.css
+++ b/css/contact.css
@@ -1,3 +1,16 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+html{
+font-size: 100%;
+scroll-behavior: smooth;
+}
+body{
+    /* font-family: 'Inter', sans-serif; */
+}
+
 .contact-container{
     background-image: url("../image/pexels-shalender-kumar-4204698.jpg");
    
@@ -8,6 +21,40 @@
     background-repeat: no-repeat;
     padding-top: 10rem;
     /* padding: 7rem; */
+
+}
+.nav{
+    padding: 3rem;
+    display: flex;
+    background-color: #2a695fed;
+    justify-content: space-between;
+margin-top: 0;
+}
+.img-log{
+    width: 150px;
+}
+.nav-links a{
+    color: white;
+    text-decoration: none;
+    
+
+
+}
+.nav-link:hover{
+    background-color: #000F3A;
+    cursor: pointer;
+    color: #FFDF0E;
+    padding: 1.3rem;
+    border-radius: 30px;
+}
+.nav-links {
+    padding: 3rem;
+    list-style-type: none;
+    display: flex;
+    gap: 2rem;
+    color: white;
+    font-size: 2rem;
+    align-items: center;
 
 }
 .content{
